fixed: reviews overflow

--- a/css/style.css
+++ b/css/style.css
@@ -959,7 +959,7 @@ template {
 }
 
 .reviews {
-  padding: 40px 0 32px 0;
+  padding: 40px 0 70px 0;
 }
 
 .reviews__title {
@@ -1084,9 +1084,11 @@ template {
 .reviews-slider__description {
   font-size: 12px;
   line-height: 160%;
+  max-height: 120px;
   color: #333333;
   text-align: justify;
   z-index: 1;
+  overflow: scroll;
 }
 
 .activities {
@@ -1250,7 +1252,7 @@ template {
     max-width: 700px;
   }
   .reviews {
-    padding: 40px 0 2px 0;
+    padding: 40px 0 60px 0;
   }
   .reviews__title {
     font-size: 30px;
@@ -1260,6 +1262,9 @@ template {
   .reviews-slider__item {
     max-width: 579px;
     padding: 0 62px 30px;
+  }
+  .reviews-slider__description {
+    max-height: 135px;
   }
   .activities {
     padding-bottom: 70px;
@@ -1389,7 +1394,7 @@ template {
     line-height: 38px;
   }
   .reviews {
-    padding: 40px 0 0;
+    padding: 40px 0 50px;
   }
   .reviews__title {
     font-size: 18px;
@@ -1453,7 +1458,7 @@ template {
     max-width: 100%;
   }
   .activities {
-    padding-top: 0;
+    padding-top: 40px;
   }
   .activities__card {
     margin-bottom: 20px;
@@ -1464,6 +1469,12 @@ template {
   .card {
     width: 100%;
     height: 255px;
+  }
+}
+
+@media (max-width: 320px) {
+  .reviews-slider__description {
+    max-height: 270px;
   }
 }
 /*# sourceMappingURL=style.css.map */
