--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -49,7 +49,7 @@
     &-wrapper
       max-width: 700px
   .reviews
-    padding: 40px 0 2px 0
+    padding: 40px 0 60px 0
     &__title
       font-size: 30px
       line-height: 38px
@@ -58,6 +58,8 @@
       &__item
         max-width: 579px
         padding: 0 62px 30px
+      &__description
+        max-height: 135px  
   .activities
     padding-bottom: 70px
     &-wrapper
@@ -140,7 +142,7 @@
         font-size: 30px
         line-height: 38px
   .reviews
-    padding: 40px 0 0
+    padding: 40px 0 50px
     &__title
       font-size: 18px
       line-height: 23px
@@ -161,6 +163,7 @@
           right: 50%
           transform: translateX(50%)
           margin-right: -85px
+      &__description   
   .activities
     padding-top: 20px
     padding-bottom: 60px
@@ -186,7 +189,7 @@
   .subscribe
     max-width: 100%
   .activities
-    padding-top: 0
+    padding-top: 40px
     &__card
       margin-bottom: 20px
       &:last-child
@@ -194,3 +197,8 @@
   .card
     width: 100%
     height: 255px
+@media (max-width: 320px)
+  .reviews
+    &-slider
+      &__description
+        max-height: 270px
