--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -1,5 +1,5 @@
 .reviews
-  padding: 40px 0 32px 0
+  padding: 40px 0 70px 0
   &__title
     text-transform: uppercase
     font-size: 36px
@@ -83,6 +83,8 @@
     &__description
       font-size: 12px
       line-height: 160%
+      max-height: 120px
       color: $text-color
       text-align: justify
       z-index: 1
+      overflow: scroll
